@@ -16,6 +16,7 @@ bc-fluid-icon=Replace Fluids
 bc-entity-icon=Replace Entities
 bc-recipe-icon=Replace Recipes
 bc-technology-icon=Replace Technologies
+bc-space-location-icon=Replace Planets
 bc-achievement-icon=Replace Achievements
 bc-item-group-icon=Replace Item Groups
 bc-tile-icon=Replace Tiles
