@@ -7,6 +7,7 @@ Date: ????
     - Added a global setting to change how normal messages are sent.
     - Added /t and /team commands to send messages normally.
     - Added option to show timestamps next to each message. These are in-game time, as real time is simply not something mods can get.
+    - Added imagify support for planets and space-locations (wrapped under the same setting)
   Commands:
     - Replicated /help & /h
     - Replicated /clear
